<resources>
    <string name="app_name">Mood Diary</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_news">News</string>
    <string name="title_me">Me</string>
    <string name="desc">ImageView</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="UserID">UserID</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Login_your_account">Login your account</string>
    <string name="Forget_password">Forget password</string>
    <string name="Create_a_new_account.">Create a new account.</string>
    <string name="Card_Diary">Card Diary</string>
    <string name="Travel_Diary">Travel Diary</string>
    <string name="Mood_Tag">Mood Tag</string>
    <string name="Work_Record">Work Record</string>
    <string name="Personal_Information">Personal Information</string>
    <string name="Collection">Collection</string>
    <string name="Share_to_friend">Share to friend</string>
    <string name="Setting">Setting</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Help_and_feedback">Help and feedback</string>
    <string name="About_MoodDiary">About MoodDiary</string>
    <string name="LogOut">Log Out</string>
    <string name="Add_Mood_Tag">Add Mood Tag</string>
    <string name="Add_Work_Record">Add Work Record</string>
    <string name="Add_Travel_Dairy">Add Travel Dairy</string>

    <string name="title_1">title_1</string>
    <string name="title_2">title_2</string>
    <string name="title_3">title_3</string>
    <string name="title_4">title_4</string>
    <string name="text_1">text_1</string>
    <string name="text_2">text_2</string>
    <string name="text_3">text_3</string>
    <string name="text_4">text_4</string>

</resources>
