<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp"
    tools:context=".HomeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/title_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="20sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imgBtn_CardDiary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_fragment"
                android:contentDescription="@string/desc"/>

            <TextView
                android:id="@+id/tv_CardDiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:text="@string/Card_Diary"
                android:textSize="30sp"
                android:textColor="@color/brack"
                app:layout_constraintStart_toStartOf="@+id/imgBtn_CardDiary"
                app:layout_constraintTop_toTopOf="@+id/imgBtn_CardDiary" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imgBtn_TravelDiary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_traveldiary_bg"
                android:contentDescription="@string/desc"/>

            <TextView
                android:id="@+id/tv_TravelDiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:text="@string/Travel_Diary"
                android:textSize="30sp"
                android:textColor="@color/brack"
                app:layout_constraintStart_toStartOf="@+id/imgBtn_TravelDiary"
                app:layout_constraintTop_toTopOf="@+id/imgBtn_TravelDiary" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imgBtn_MoodTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_moodtag_bg"
                android:contentDescription="@string/desc"/>

            <TextView
                android:id="@+id/tv_MoodTag"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:text="@string/Mood_Tag"
                android:textSize="30sp"
                android:textColor="@color/brack"
                app:layout_constraintStart_toStartOf="@+id/imgBtn_MoodTag"
                app:layout_constraintTop_toTopOf="@+id/imgBtn_MoodTag" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">

        <ImageButton
            android:id="@+id/imgBtn_WorkRecord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_workrecord_bg"
            android:contentDescription="@string/desc"/>

        <TextView
            android:id="@+id/tv_WorkRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:text="@string/Work_Record"
            android:textSize="30sp"
            android:textColor="@color/brack"
            app:layout_constraintStart_toStartOf="@+id/imgBtn_WorkRecord"
            app:layout_constraintTop_toTopOf="@+id/imgBtn_WorkRecord" />

        </RelativeLayout>


    </LinearLayout>












</android.support.constraint.ConstraintLayout>