<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Login"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/me_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/desc"/>


        <EditText
            android:id="@+id/et_UserID"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/login_edittext_bg"
            android:ems="10"
            android:hint="@string/UserID"
            android:inputType="textPersonName"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login" />


        <EditText
            android:id="@+id/et_Password"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/login_edittext_bg"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            app:layout_constraintEnd_toEndOf="@+id/et_UserID"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_UserID"
            app:layout_constraintTop_toBottomOf="@+id/et_UserID" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:onClick="onClickLogin"
            android:background="@drawable/login_button_selector"
            android:text="@string/Login"
            app:layout_constraintEnd_toEndOf="@+id/et_Password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_Password"
            app:layout_constraintTop_toBottomOf="@+id/et_Password" />

        <TextView
            android:id="@+id/tv_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/Forget_password"
            app:layout_constraintEnd_toEndOf="@+id/et_Password"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="@+id/et_Password"
            app:layout_constraintTop_toBottomOf="@+id/et_Password" />


    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_creatNewCount"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:onClick="onClickLinktoRegister"
        android:text="@string/Create_a_new_account."
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />




</android.support.constraint.ConstraintLayout>